# MultiAgentTranslation

./: README.md  translated.txt
Backend/: pyproject.toml  translated.txt
Backend/db/: chroma.sqlite3
Backend/src/translate/: crew.py  main.py
Backend/src/translate/config/: agents.yaml  tasks.yaml
Backend/src/translate/tools/: pdf_reader.py  pdf_writer.py
src/translate/: crew.py  main.py
