[project]
name = "translate"
version = "0.1.0"
description = "Translate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "PyMuPDF>=1.23.0",  # For PDF processing (provides fitz module)
    "unstructured[all-docs]>=0.12.0",
    "pdf2image>=1.17.0",  # For better PDF processing
    "pytesseract>=0.3.10",  # For OCR capabilities
    "pdfminer.six>=20221105",  # For PDF text extraction
    "pdfplumber>=0.10.3",  # Better PDF text extraction with CJK support
    "reportlab>=4.1.0",  # For PDF creation with layout control
    "pillow>=10.2.0",  # Required for image handling
]

[project.scripts]
translate = "translate.main:run"
run_crew = "translate.main:run"
train = "translate.main:train"
replay = "translate.main:replay"
test = "translate.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
